--- a/springdata/src/main/resources/application.properties
+++ b/springdata/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+//Ruta donde vamos a alojar la base de datos
+spring.datasource.url=jdbc:h2:file:~/springdatademo
+spring.datasource.driverClassName=org.h2.Driver
+//usuario de la base de datos
+spring.datasource.username=martarondan
+spring.datasource.password=
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+//Indica que vamos a hacer con la BD al iniciar la aplicacion
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
