--- a/block10-docker/src/main/resources/application.properties
+++ b/block10-docker/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=postgres
-spring.datasource.password=contrasena
+spring.datasource.password=admin
 
 
 spring.datasource.initialization-mode=always
