--- a/block10-docker/Dockerfile
+++ b/block10-docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11
-EXPOSE 5432
+FROM openjdk:17-jdk
+EXPOSE 8080
 COPY target/*.jar /usr/local/lib/spring.jar
 ENTRYPOINT ["java" , "-jar","/usr/local/lib/spring.jar"]
