--- a/block13-testing/pom.xml
+++ b/block13-testing/pom.xml
@@ -47,6 +47,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
@@ -62,9 +71,6 @@
 				</dependency>
 			</dependencies>
 		</dependencyManagement>
-
-
-
 	<build>
 		<plugins>
 			<plugin>
